--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,100 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Karma:wght@500&display=swap');
+body {
+    width: 80%;
+    margin: 0 auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app-wrapper {
+    margin: 0 auto;
+    display: grid;
+    grid-template-areas: "h h" "n c";
+    grid-template-rows: 60px 1fr;
+    grid-template-columns: 2fr 10fr;
+    row-gap: 20px;
+    column-gap: 15px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.header {
+    grid-area: h;
+    background-color: #00539C;
+    display: flex;
+    align-items: center;
+    padding-left: 2%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.nav {
+    grid-area: n;
+    background-color: #EEA47F;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    line-height: 35px;
+    padding-top: 15%;
 }
 
-.App-link {
-  color: #61dafb;
+.nav a {
+    text-decoration: none;
+    font-family: 'Karma', serif;
+    font-size: 1.3rem;
+    color: #fff;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.content {
+    grid-area: c;
+    background-color: #00539C;
+    color: #fff;
+}
+
+.mainImg {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
+
+.profileImg {
+    width: 15%;
+    height: 150px;
+    object-fit: cover;
+    padding: 1%;
+}
+
+.profile {
+    display: flex;
+    font-family: 'Karma', serif;
+}
+
+.posts {
+    font-family: 'Karma', serif;
+    padding: 1%;
+}
+
+.input-post {
+    border: none;
+    width: 20%;
+    height: 30px;
+    margin-right: 10px;
+}
+
+.inputs {
+    display: flex;
+    align-items: center;
+}
+
+.send-btn {
+    font-family: 'Karma', serif;
+    font-size: 1rem;
+    background-color: #EEA47F;
+    border: none;
+    color: #fff;
+    padding: 10px 20px;
+}
+
+.peachNumb {
+    width: 4%;
+    padding-right: 10px;
+}
+
+.flex {
+    display: flex;
+    align-items: center;
 }
