--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -8,9 +8,16 @@
     padding-top: 15%;
 }
 
-.nav a {
+.item {
     text-decoration: none;
     font-family: 'Karma', serif;
     font-size: 1.3rem;
     color: #fff;
+}
+
+.active {
+    color: #00539C;
+    text-decoration: none;
+    font-family: 'Karma', serif;
+    font-size: 1.3rem;
 }
